--- a/templates/index.html
+++ b/templates/index.html
@@ -279,7 +279,7 @@
                     <div>Suraksha Deposit (30% of the year): <span class="amount">{{ result.suraksha_deposit|round(2) }} BDT </span></div>
                 </div>
                 {% else %}
-                <p class="no-result">Enter your amount to see results.</p>
+                <p class="no-result">Enter your amount to see results</p>
                 {% endif %}
             </div>
         </div>
